--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
-    <link rel="stylesheet" href="style.css">checking git
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>TIC-TAC-TOE</h1>
